<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/catHero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:contentDescription="@string/imgDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tigerMons"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757"
        app:srcCompat="@drawable/cat"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/tigerMons"
        android:layout_width="266dp"
        android:layout_height="201dp"
        android:contentDescription="@string/imgDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79"
        app:srcCompat="@drawable/tiger"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/skill1Btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/skill1"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327"
        app:srcCompat="@drawable/skill_scratch"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/skill2Btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/skill2"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/skill1Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/skill1Btn"
        app:layout_constraintTop_toTopOf="@+id/skill1Btn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/skill_bite" />

    <ImageButton
        android:id="@+id/skill3Btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/skill3"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/skill2Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toEndOf="@+id/skill2Btn"
        app:layout_constraintTop_toTopOf="@+id/skill2Btn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/skill_pounce" />

    <Button
        android:id="@+id/attackBtn"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape"
        android:text="@string/attack"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tigerMons"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/catHero"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874" />

    <TextView
        android:id="@+id/heroName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hero_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/monsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enemy_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toEndOf="@+id/heroName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/heroHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heroHP"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroName"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/heroEN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heroEnergy"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroName"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/heroDMG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heroDMG"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroName"
        app:layout_constraintVertical_bias="0.953" />

    <TextView
        android:id="@+id/monsHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monsHP"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monsName"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/monsDMG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monsDMG"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monsName"
        app:layout_constraintVertical_bias="0.953" />

    <TextView
        android:id="@+id/combatLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hpTxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normalTxtHeroHP"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/heroHP"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <TextView
        android:id="@+id/energyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normalTxtEnergy"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/heroEN"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <TextView
        android:id="@+id/dmgTxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normalTxtHeroDMG"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/heroDMG"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/dmgTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normalTxtMonsDMG"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/monsDMG"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/hpTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normalTxtMonsHP"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/combatLog"
        android:textColor="@color/light_brown"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

</androidx.constraintlayout.widget.ConstraintLayout>

